Added custom tags / created yandex server part

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,22 +1,29 @@
 {% load static %}
+{% load blog_tags %}
 <html lang="en">
 <head>
-    <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+	<title>{% block title %}{% endblock %}</title>
+	<link href="{% static 'css/blog.css' %}" rel="stylesheet">
 </head>
 <body>
 
 <div id="content">
-
-    {% block content %}
-    {% endblock %}
-
-
+	
+	{% block content %}
+	{% endblock %}
 
 </div>
+
 <div id="sidebar">
-    <h2>My blog</h2>
-    <p>This is my blog.</p>
+	<h2>My blog</h2>
+	<p>This is my blog.</p>
+	{% block side %}
+	{% endblock %}
+	
+	<h3>Latest posts</h3>
+	{% show_latest_posts 3 %}
+l
 </div>
+
 </body>
 </html>
