--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -1,4 +1,6 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
+
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
 <h1>{{ post.title }}</h1>
@@ -10,7 +12,7 @@
 		Share this post
 	</a>
 </p>
-{{ post.body|linebreaks }}
+{{ post.body|markdown }}
 
 {% with comments.count as total_comments %}
 <h2>
