--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 
 {% block title %}My Blog1{% endblock %}
 {% block content %}
@@ -14,7 +15,7 @@
 	Published {{ post.publish }} by {{ post.author }}
 </p>
 
-{{ post.body|truncatewords:30|linebreaks }}
+{{ post.body|markdown|truncatewords:30|linebreaks }}
 
 {% endfor %}
 
@@ -22,7 +23,5 @@
 {% endblock %}
 
 {% block side %}
-{% load blog_tags %}
-
 <p> You have written {% total_posts posts%} posts so far.</p>
 {% endblock %}
