--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -20,10 +20,10 @@
 </h2>
 {% endwith %}
 
-{% for comment in comments %}
+{% for comment in comments.all %}
 <div class="comment">
 	<p class="info">
-		Comment {{ forloop.counter }} by {{ comment.name }}
+		Comment {{ forloop.counter }} by {{ comment.author }}
 		{{ comment.created }}
 	</p>
 	{{ comment.body|linebreaks }}
@@ -32,6 +32,7 @@
 <p>There are no comments yet.</p>
 {% endfor %}
 
+{% if request.user.is_authenticated %}
 {% if new_comment %}
 <h2>Your comment has been added.</h2>
 {% else %}
@@ -41,6 +42,9 @@
 	{% csrf_token %}
 	<p><input type="submit" value="Add comment"></p>
 </form>
+{% endif %}
+{% else %}
+<h3> Register to write a new comment </h3>
 {% endif %}
 
 {% endblock %}
