--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,41 +1,46 @@
 body {
-    margin:0;
-    padding:0;
-    font-family:helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: helvetica, sans-serif;
 }
 
 a {
-    color:#00abff;
-    text-decoration:none;
+    color: #00abff;
+    text-decoration: none;
 }
 
 h1 {
-    font-weight:normal;
-    border-bottom:1px solid #bbb;
-    padding:0 0 10px 0;
+    font-weight: normal;
+    border-bottom: 1px solid #bbb;
+    padding: 0 0 10px 0;
 }
 
 h2 {
-    font-weight:normal;
-    margin:30px 0 0;
+    font-weight: normal;
 }
 
 #content {
-    float:left;
-    width:60%;
-    padding:0 0 0 30px;
+    float: left;
+    width: 60%;
+    padding: 0 0 0 30px;
+}
+
+.go_to_dash {
+    font-style: oblique;
+    border: 4px double #caced6; /* Параметры границы */
+    padding: 10px; /* Поля вокруг текста */
 }
 
 #sidebar {
-    float:right;
-    width:30%;
-    padding:10px;
-    background:#efefef;
-    height:100%;
+    float: right;
+    width: 30%;
+    padding: 10px;
+    background: #efefef;
+    height: 100%;
 }
 
 p.date {
-    color:#ccc;
+    color: #ccc;
     font-family: georgia, serif;
     font-size: 12px;
     font-style: italic;
@@ -43,50 +48,63 @@ p.date {
 
 /* pagination */
 .pagination {
-    margin:40px 0;
-    font-weight:bold;
+    margin: 40px 0;
+    font-weight: bold;
 }
 
 /* forms */
 label {
-    float:left;
-    clear:both;
-    color:#333;
-    margin-bottom:4px;
+    float: left;
+    clear: both;
+    color: #333;
+    margin-bottom: 4px;
 }
+
 input, textarea {
-    clear:both;
-    float:left;
-    margin:0 0 10px;
-    background:#ededed;
-    border:0;
-    padding:6px 10px;
-    font-size:12px;
+    clear: both;
+    float: left;
+    margin: 0 0 10px;
+    background: #ededed;
+    border: 0;
+    padding: 6px 10px;
+    font-size: 12px;
 }
+
 input[type=submit] {
-    font-weight:bold;
-    background:#00abff;
-    color:#fff;
-    padding:10px 20px;
-    font-size:14px;
-    text-transform:uppercase;
+    font-weight: bold;
+    background: #00abff;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 14px;
+    text-transform: uppercase;
 }
+
 .errorlist {
-    color:#cc0033;
-    float:left;
-    clear:both;
-    padding-left:10px;
+    color: #cc0033;
+    float: left;
+    clear: both;
+    padding-left: 10px;
 }
 
 /* comments */
 .comment {
-    padding:10px;
+    padding: 10px;
 }
+
 .comment:nth-child(even) {
-    background:#efefef;
+    background: #efefef;
 }
+
+.page_preview {
+    padding: 1em;
+}
+.page_preview:nth-child(even) {
+    background: #f6f6f6;
+}
+
 .comment .info {
-    font-weight:bold;
-    font-size:12px;
-    color:#666;
+    font-weight: bold;
+    font-size: 12px;
+    color: #666;
 }
+
