--- a/account/templates/registration/password_reset_done.html
+++ b/account/templates/registration/password_reset_done.html
@@ -1,8 +1,23 @@
 {% extends "base.html" %}
+{% load account_tags %}
+
 {% block title %}Reset your password{% endblock %}
+
 {% block content %}
+
 <h1>Reset your password</h1>
+
+{% get_user_perm request as add_users_flag %}
+
+{% if add_users_flag %}
+
 <p>We've emailed you instructions for setting your password.</p>
 <p>If you don't receive an email, please make sure you've entered
 	the address you registered with.</p>
+{% else %}
+
+<p>Sorry, there is no accounts with this email</p>
+
+{% endif%}
+
 {% endblock %}
