--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -17,7 +17,8 @@
 		<input type="hidden" name="next" value="{{ next }}"/>
 		<p><input type="submit" value="Log-in"></p>
 	</form>
-	
+	<p> If you don't have an
+		account <a href="{% url 'account:register' %}"> register here</a></p>
 	<p><a href="{% url 'account:password_reset' %}">Forgotten your password?</a></p>
 </div>
 
