--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -10,6 +10,15 @@
 {% else %}
 <p>Please, use the following form to log-in:</p>
 {% endif %}
+<div class="social">
+	<ul>
+		<li class="facebook">
+			<a href="{% url 'social:begin' 'facebook' %}">Sign in with
+			Facebook</a>
+		</li>
+	</ul>
+</div>
+
 <div class="login-form">
 	<form action="{% url 'account:login2' %}" method="post">
 		{{ form.as_p }}
@@ -21,5 +30,4 @@
 		account <a href="{% url 'account:register' %}"> register here</a></p>
 	<p><a href="{% url 'account:password_reset' %}">Forgotten your password?</a></p>
 </div>
-
 {% endblock %}
