--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -16,6 +16,11 @@
 			<a href="{% url 'social:begin' 'facebook' %}">Sign in with
 			Facebook</a>
 		</li>
+		<li class="vk">
+			<a href="social-auth/login/vk-oauth2">
+				<img src="/media/lvk.png" class="avatar-3" data-toggle="tooltip"
+					 title="{% trans 'Login via VKontakte' %}"></a>
+		</li>
 	</ul>
 </div>
 
