--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -9,24 +9,23 @@
 <body>
 
 
-
 <div id="header">
-	<span class="logo"><a href ="{% url 'blog:post_list' %}" >MyBlog</a></span>
+	<span class="logo"><a href="{% url 'blog:post_list' %}">MyBlog</a></span>
 	{% if request.user.is_authenticated %}
 	<ul class="menu">
 		<li {% if section == "dashboard" %} class="selected" {% endif %}>
-			<a href="{% url 'account:dashboard' %}">My dashboard</a>
+		<a href="{% url 'account:dashboard' %}">My dashboard</a>
 		</li>
 		<li {% if section == "blogs" %}class="selected" {% endif %}>
-			<a href="{% url 'blog:post_list' %}">Blogs</a>
+		<a href="{% url 'blog:post_list' %}">Blogs</a>
 		</li>
 		<li {% if section == "images" %}class="selected" {% endif %}>
-			<a href="#">Images</a>
+		<a href="#">Images</a>
 		</li>
 		<li {% if section == "people" %}class="selected" {% endif %}>
-			<a href="#">People</a>
+		<a href="#">People</a>
 		</li>
-		
+	
 	</ul>
 	{% endif %}
 	<span class="user">
@@ -43,18 +42,40 @@
 <div id="content">
 	
 	{% if messages %}
- 	<ul class="messages">
- 		{% for message in messages %}
- 		<li class="{{ message.tags }}">
- 		{{ message|safe }}
- 		</li>
- 	{% endfor %}
-	 </ul>
+	<ul class="messages">
+		{% for message in messages %}
+		<li class="{{ message.tags }}">
+			{{ message|safe }}
+		</li>
+		{% endfor %}
+	</ul>
 	{% endif %}
 	
 	{% block content %}
 	{% endblock %}
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src = "https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
+<script>
+    var csrftoken = Cookies.get('csrftoken');
 
+    function csrfSafeMethod(method) {
+        // these HTTP methods do not require CSRF protection
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+
+    $.ajaxSetup({
+        beforeSend: function (xhr, settings) {
+            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
+    $(document).ready(function () {
+        	{% block domready %}
+ 		{% endblock %}
+ 
+    });
+</script>
 </body>
 </html>
