--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -20,7 +20,7 @@
 		<a href="{% url 'blog:post_list' %}">Blogs</a>
 		</li>
 		<li {% if section == "images" %}class="selected" {% endif %}>
-		<a href="#">Images</a>
+		<a href="{% url 'images:list' %}">Images</a>
 		</li>
 		<li {% if section == "people" %}class="selected" {% endif %}>
 		<a href="#">People</a>
