--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -8,8 +8,12 @@
 	<li><a href="{% url 'account:password_change' %}"> Change Password</a></li>
 </ul>
 
-<p>You have bookmarked
-	{{ request.user.images_created.count }} image{{ request.user.images_created.count|pluralize }}.</p>
+<h2>What's happening</h2>
+<div id="action-list">
+ {% for action in actions %}
+ {% include "actions/action/detail.html" %}
+ {% endfor %}
+</div>
 {% endblock %}
 
 
