--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -16,5 +16,10 @@
 	</h2>
 	<p class="price">${{ product.price }}</p>
 	{{ product.description|linebreaks }}
+	<form action="{% url 'cart:cart_add' product.id %}" method="post">
+		{{ cart_product_form }}
+		{% csrf_token %}
+		<input type="submit" value="Add to cart">
+	</form>
 </div>
 {% endblock %}
