--- a/account/templates/django_registration/registration_complete.html
+++ b/account/templates/django_registration/registration_complete.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Email auth{% endblock %}
 {% block content %}
-<h1>We sent you a message to an email</h1>
+
+<h1>Next step: check your inbox</h1>
+
+<h2>We sent you an email that includes a link to activate your login to our sandbox environment and online signup process.</h2>
 {% endblock %}
