--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <html>
 <head>
 	<meta charset="utf-8"/>
@@ -7,6 +8,21 @@
 </head>
 <body>
 <div id="header">
+	{% get_current_language as LANGUAGE_CODE %}
+	{% get_available_languages as LANGUAGES %}
+	{% get_language_info_list for LANGUAGES as languages %}
+	<div class="languages">
+		<p>{% trans "Language" %}:</p>
+		<ul class="languages">
+			{% for language in languages %}
+			<li>
+				<a href="/{{ language.code }}/" {% if language.code == LANGUAGE_CODE %} class = "selected" {% endif %}>
+					{{ language.name_local }}
+				</a>
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
 	<a href="/" class="logo">My shop</a>
 </div>
 <div id="subheader">
@@ -15,8 +31,8 @@
 		{% if total_items > 0 %}
 		Your cart:
 		<a href="{% url 'cart:cart_detail' %}">
-		{{ total_items }} item{{ total_items|pluralize }},
-		${{ cart.get_total_price }}
+			{{ total_items }} item{{ total_items|pluralize }},
+			${{ cart.get_total_price }}
 		</a>
 		{% else %}
 		Your cart is empty.
