--- a/account/static/css/base.css
+++ b/account/static/css/base.css
@@ -435,3 +435,53 @@ figure:hover + span {
     font-size: 24px;
     width: 100%;
 }
+
+#chat-input {
+    overflow: hidden;
+    margin-left: 68%;
+    background-color: #e4f7ff;
+    padding: 10px;
+}
+
+#chat-message-input, #chat-message-submit {
+    margin: 0px;
+
+    width: 100%;
+}
+
+
+#chat {
+    top: 64px;
+    bottom: 0;
+    width: 44%;
+
+    position: fixed;
+    overflow-y: scroll;
+
+    padding-bottom: 150px;
+}
+
+#chat .message {
+    background: #efefef;
+    padding: 10px 20px;
+    border-radius: 4px;
+    width: auto;
+    display: inline;
+    float: left;
+    margin: 10px 10px 0;
+    min-width: 440px;
+    clear: both;
+}
+
+#chat .message.me {
+    display: inline;
+    float: right;
+    background: #DCEDE0;
+    color: #56A668;
+}
+
+#chat .date {
+    color: #aaa;
+    font-style: italic;
+    font-size: 12px;
+}
