--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -28,6 +28,10 @@
 		<li {% if section == "chat" %}class="selected" {% endif %}>
 		<a href="{% url 'chat:room' %}">Chat</a>
 		</li>
+		<li {% if section == "shop" %}class="selected" {% endif %}>
+		<a href="{% url 'shop:product_list' %}">Shop</a>
+		</li>
+
 	
 	</ul>
 	{% endif %}
