--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+
 <html>
 <head>
 	<meta charset="utf-8"/>
@@ -23,19 +24,19 @@
 			{% endfor %}
 		</ul>
 	</div>
-	<a href="/" class="logo">My shop</a>
+	<a href="/" class="logo">My shop</a>  <a href="/account" class="logo">My Account</a>
 </div>
 <div id="subheader">
 	<div class="cart">
 		{% with total_items=cart|length %}
 		{% if total_items > 0 %}
-		Your cart:
+		{% blocktrans %} Your cart {% endblocktrans %} :
 		<a href="{% url 'cart:cart_detail' %}">
 			{{ total_items }} item{{ total_items|pluralize }},
 			${{ cart.get_total_price }}
 		</a>
 		{% else %}
-		Your cart is empty.
+		{% blocktrans %} Your cart is empty. {% endblocktrans %}
 		{% endif %}
 		{% endwith %}
 	</div>
