--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -1,11 +1,13 @@
 {% extends "shop/base.html" %}
 {% load static %}
+{% load i18n %}
+
 {% block title %}
-{% if category %}{{ category.name }}{% else %}Products{% endif %}
+{% if category %}{{ category.name }}{% else %} {% blocktrans %}Products{% endblocktrans %} {% endif %}
 {% endblock %}
 {% block content %}
 <div id="sidebar">
-	<h3>Categories</h3>
+	<h3>{% blocktrans %} Categories{% endblocktrans %}</h3>
 	<ul>
 		<li {% if not category %} class="selected" {% endif %}>
 			<a href="{% url 'shop:product_list' %}">All</a>
